# fluencyai

./: .gitignore  README.md
backend/: .env.example  alembic.ini  main.py  pyproject.toml  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 202604270001_create_users_table.py  202604270002_create_password_reset_tokens_table.py  202604270003_add_user_avatar_url.py  202604280001_add_lesson_section_progress.py  202604280002_add_item_progress_and_day1_content.py  202604290001_add_learning_tracks_and_grammar_practice.py  3154c76ad42e_add_user_is_admin.py  81724a9684c6_create_learning_tables.py
backend/application/ai/: knowledge_service.py
backend/application/auth/: __init__.py  service.py
backend/application/product/: service.py
backend/application/repositories/: learning_repository.py  password_reset_token_repository.py  user_repository.py
backend/application/security/: password_hasher.py  token_service.py
backend/domain/: exceptions.py
backend/domain/entities/: __init__.py  knowledge.py  learning.py  password_reset_token.py  user.py
backend/infrastructure/config/: __init__.py  settings.py
backend/infrastructure/database/: session.py
backend/infrastructure/repositories/: sqlalchemy_user_repository.py  (+2 more)
backend/knowledge_base/: rules.md
backend/knowledge_upload_samples/: immersion_plan_foundation_day_01.md
backend/presentation/: dependencies.py
backend/tests/: test_account.py  test_api.py  test_auth.py  test_knowledge_api.py  test_knowledge_service.py  test_learning_domain.py  test_product_features.py  test_product_service_fase2.py
(+94 files in other folders)
